# rust-nrf24

./: Cargo.toml
src/: lib.rs  rpi_ce.rs
