[package]
name = "nrf24l01"
version = "0.3.1"
authors = ["Romuald Texier-Marcadé <romuadtm@gmail.com>"]
description = "A pure Rust user space driver for NRF24L01(+) transceivers on Linux."
readme = "README.md"
license = "MIT/Apache-2.0"
categories = ["embedded", "hardware-support"]
keywords = ["driver", "wireless", "radio", "transceiver", "nrf"]
repository = "https://github.com/rtxm/rust-nrf24l01"
homepage = "https://github.com/rtxm/rust-nrf24l01"
edition = "2021"

[dependencies]
spidev = "0.6.0"
rppal = "0.17.1"